# arduino-screenshare

./: .gitignore  README.md
firmware/: CMakeLists.txt  Makefile
firmware/eztft/: CMakeLists.txt
firmware/eztft/src/: tft.cpp  tft.hpp  tft_calc.cpp  tft_calc.hpp
firmware/src/: arduino-screenshare.cpp  xram.cpp  xram.hpp
software/src/: main.py
